mais uma volta no tempo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <p>
         pagina de teste
     </p>
-    <p>
-        Atualizacao no github
-    </p>
-        
+    <h2>Alteração da pagina hoje</h2>
 </body>
 </html>
